# SmartCalc

./: CMakeLists.txt  Makefile  README.md
controller/: s21_CalculatorController.cc  s21_CalculatorController.h  s21_CreditsController.cc  s21_CreditsController.h
docs/: Doxyfile
model/: s21_Calculator.cc  s21_Calculator.h  s21_Common.h  s21_Credits.cc  s21_Credits.h  s21_Model.h  s21_Tokenizer.cc  s21_Tokenizer.h  s21_Validator.cc  s21_Validator.h
tests/: s21_calculator_tests.cc  s21_credits_tests.cc  s21_tokenizer_tests.cc  s21_validator_tests.cc  test_assist.h
view/: font.qrc  main.cpp  s21_CalculatorView.cpp  s21_CalculatorView.h  s21_CalculatorView.ui  s21_connections.cpp  s21_credits.cpp  s21_graph.cpp  s21_menu.cpp
view/icons/: MainIcon256.icns  icons.qrc
